// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should authenticate with the backend 1`] = `
Object {
  "ExpirationDate": "2017-07-14T02:50:00.000Z",
  "Token": "Session1",
  "UserId": 0,
  "UserName": "sam.babic@onbase.com",
  "delegate": "Session2",
}
`;

exports[`should authenticate with the backend 2`] = `
Object {
  "me": Object {
    "authed": Object {
      "ExpirationDate": "2017-07-14T02:50:00.000Z",
      "Token": "Session1",
      "UserId": 0,
      "UserName": "sam.babic@onbase.com",
      "delegate": "Session2",
    },
    "email": "sam.babic@onbase.com",
    "expires": 1500000600000,
    "password": "password",
  },
  "store": Map {
    "Session2" => Object {
      "authed": Object {
        "ExpirationDate": "2017-07-14T02:50:00.000Z",
        "Token": "Session1",
        "UserId": 0,
        "UserName": "sam.babic@onbase.com",
        "delegate": "Session2",
      },
      "email": "sam.babic@onbase.com",
      "expires": 1500000600000,
      "password": "password",
    },
  },
}
`;

exports[`should authenticate with the backend 3`] = `
Array [
  "http://mock.com/api/authenticate",
]
`;

exports[`should get pnx tokens without updating context 1`] = `
Object {
  "ExpirationDate": "2017-07-14T02:50:00.000Z",
  "Token": "Session3",
  "UserId": 1,
  "UserName": "sam.babic@onbase.com",
}
`;

exports[`should get pnx tokens without updating context 2`] = `
Object {
  "me": Object {
    "email": "sam.babic@onbase.com",
    "password": "password",
  },
  "store": Map {
    "NICE-SHAREBASE-ACCESS-TOKEN" => Object {
      "email": "sam.babic@onbase.com",
      "password": "password",
    },
  },
  "token": "NICE-SHAREBASE-ACCESS-TOKEN",
}
`;

exports[`should get pnx tokens without updating context 3`] = `
Array [
  "http://mock.com/api/authenticate",
]
`;

exports[`should make requests using a phoenix token 1`] = `
Array [
  Object {
    "IsPrivate": true,
    "LibraryId": 406,
    "LibraryName": "My Library",
    "Links": Object {
      "Folders": "https://app.sharebase.com/ShareBaseAPI/api/libraries/406/folders",
      "Self": "https://app.sharebase.com/ShareBaseAPI/api/libraries/406",
    },
  },
  Object {
    "IsPrivate": false,
    "LibraryId": 1782,
    "LibraryName": "Iron Man Suit",
    "Links": Object {
      "Folders": "https://app.sharebase.com/ShareBaseAPI/api/libraries/1782/folders",
      "Self": "https://app.sharebase.com/ShareBaseAPI/api/libraries/1782",
    },
  },
]
`;

exports[`should make requests using a phoenix token 2`] = `
Object {
  "me": null,
  "store": Map {},
  "token": "PHNX-BACKEND-TOKEN",
}
`;

exports[`should make requests using a phoenix token 3`] = `
Array [
  "http://mock.com/api/libraries",
]
`;
